src/objects/Payment_Method__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder_Type__c</fullName>
        <label>Account Holder Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>30</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVV_Code__c</fullName>
        <label>CVV Code</label>
        <length>4</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>IF( Customer__c != null, Customer__r.Customer_Id__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Billing_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>IF( Customer__c != null , Customer__r.FirstName +&apos; &apos;+Customer__r.LastName, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_For__c</fullName>
        <label>Payment For</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACH/echeck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Billing_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Billing Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>30</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Send_Expiration_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Expiration Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>Defaults</fullName>
        <columns>NAME</columns>
        <columns>Default__c</columns>
        <columns>Card_Number__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Customer__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Defaults</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Bill</fullName>
        <active>true</active>
        <label>Direct Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guest_Pass</fullName>
        <active>true</active>
        <label>Guest Pass</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>American_Express_Starts_With_3</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ( ISPICKVAL( Card_Type__c , &apos;American Express&apos;)  &amp;&amp;   NOT(BEGINS( Card_Number__c , &apos;3&apos;) ) &amp;&amp; LEN(Card_Number__c)&gt;4) , true, false)</errorConditionFormula>
        <errorMessage>We are sorry but your card number is not of type &apos;American Express&apos;.Please enter appropriate card information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discover_starts_with_6</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ( ISPICKVAL( Card_Type__c , &apos;Discover&apos;) &amp;&amp;  NOT(BEGINS( Card_Number__c , &apos;6&apos;) )  &amp;&amp; LEN(Card_Number__c)&gt;4 )   , true, false)</errorConditionFormula>
        <errorMessage>We are sorry but your card number is not of card type &apos;Discover&apos;.Please enter appropriate card information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MasterCard_starts_with_5</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ( ISPICKVAL( Card_Type__c , &apos;MasterCard&apos;) &amp;&amp; NOT(BEGINS( Card_Number__c , &apos;5&apos;) )&amp;&amp; LEN(Card_Number__c)&gt;4) , true, false)</errorConditionFormula>
        <errorMessage>We are sorry but your card number is not of card type &apos;MasterCard&apos;.Please enter appropriate card information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_4_digit_for_American_Express</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(CVV_Code__c) &lt;&gt; 4 &amp;&amp;  TEXT(Card_Type__c) = &apos;American Express&apos;</errorConditionFormula>
        <errorMessage>Credit Cards of type American Express require a 4 digit CVV code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visa_Starts_with_4</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ( ISPICKVAL( Card_Type__c , &apos;Visa&apos;) &amp;&amp; NOT(BEGINS( Card_Number__c , &apos;4&apos;)) &amp;&amp; LEN(Card_Number__c)&gt;4) , true, false)</errorConditionFormula>
        <errorMessage>We are sorry but your card number is not of card type &apos;Visa&apos;.Please enter appropriate card information.</errorMessage>
    </validationRules>
</CustomObject>